Copyright © 2009-2011 Cisco Systems, Inc.  All rights reserved.

$COPYRIGHT$

Additional copyrights may follow

$HEADER$

===========================================================================

This file contains the main features as well as overviews of specific
bug fixes (and other actions) for each version of hwloc since version
0.9.


Version 2.1.0
-------------
* API
  + Add the new HWLOC_OBJ_MEMCACHE object type for memory-side caches.
    - They are filtered-out by default, except in command-line tools.
    - They are only available on very recent platforms running Linux 5.2+
      and uptodate ACPI tables.
    - The KNL MCDRAM in cache mode is still exposed as a L3 unless
      HWLOC_KNL_MSCACHE_L3=0 in the environment.
  + Add HWLOC_RESTRICT_FLAG_BYNODESET and _REMOVE_MEMLESS for restricting
    topologies based on some memory nodes.
  + Add hwloc_topology_set_components() for blacklisting some components
    from being enabled in a topology.
  + Add hwloc_bitmap_nr_ulongs() and hwloc_bitmap_from/to_ulongs(),
    thanks to Junchao Zhang for the suggestion.
  + Improve the API for dealing with disallowed resources
    - HWLOC_TOPOLOGY_FLAG_WHOLE_SYSTEM is replaced with FLAG_INCLUDE_DISALLOWED
      and --whole-system command-line options with --disallowed.
      Former names are still accepted for backward compatibility.
    - Add hwloc_topology_allow() for changing allowed sets after load().
    - Add the HWLOC_ALLOW=all environment variable to totally ignore
      administrative restrictions such as Linux Cgroups.
    - Add disallowed_pu and disallowed_numa bits to the discovery support
      structure.
  + Group objects have a new "dont_merge" attribute to prevent them from
    being automatically merged with identical parent or children.
* Backends
  + Add support for Linux 5.2 new sysfs cpu topology files with Die information.
  + Add support for Intel v2 Extended Topology Enumeration in the x86 backend.