@@ -805,10 +805,6 @@ hwloc__xml_import_object(hwloc_topology_t topology,
 		      state->global->msgprefix);
 	    goto error_with_object;
 	  }
-	} else if (!strcasecmp(attrvalue, "Die")) {
-	  /* deal with possible future type */
-	  obj->type = HWLOC_OBJ_GROUP;
-	  obj->attr->group.kind = HWLOC_GROUP_KIND_INTEL_DIE;
 	} else if (!strcasecmp(attrvalue, "Tile")) {
 	  /* deal with possible future type */
 	  obj->type = HWLOC_OBJ_GROUP;
